// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches snapshot 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        $zIndex={1}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderRadius": 3,
              "height": 146.74,
              "justifyContent": "center",
              "marginLeft": -60.04,
              "marginRight": 10,
              "paddingBottom": 4,
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
              "shadowColor": "rgba(0, 0, 0, 0.35)",
              "shadowOffset": Object {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 5,
              "width": 102.08,
              "zIndex": 1,
            },
            Object {
              "elevation": 2,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../app/features/Card/cards/9_of_clubs.png",
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
          testID="CardImage"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Card matches snapshot 2`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        $zIndex={1}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderRadius": 3,
              "height": 146.74,
              "justifyContent": "center",
              "marginLeft": -60.04,
              "marginRight": 10,
              "paddingBottom": 4,
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
              "shadowColor": "rgba(0, 0, 0, 0.35)",
              "shadowOffset": Object {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 5,
              "width": 102.08,
              "zIndex": 1,
            },
            Object {
              "elevation": 2,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../app/features/Card/cards/ace_of_hearts.png",
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
          testID="CardImage"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Card matches snapshot 3`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        $zIndex={1}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderRadius": 3,
              "height": 146.74,
              "justifyContent": "center",
              "marginLeft": -60.04,
              "marginRight": 10,
              "paddingBottom": 4,
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
              "shadowColor": "rgba(0, 0, 0, 0.35)",
              "shadowOffset": Object {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 5,
              "width": 102.08,
              "zIndex": 1,
            },
            Object {
              "elevation": 2,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../app/features/Card/cards/2_of_clubs.png",
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
          testID="CardImage"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Card matches snapshot 4`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        $zIndex={1}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderRadius": 3,
              "height": 146.74,
              "justifyContent": "center",
              "marginLeft": -60.04,
              "marginRight": 10,
              "paddingBottom": 4,
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
              "shadowColor": "rgba(0, 0, 0, 0.35)",
              "shadowOffset": Object {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 5,
              "width": 102.08,
              "zIndex": 1,
            },
            Object {
              "elevation": 2,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../app/features/Card/cards/jack_of_spades.png",
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
          testID="CardImage"
        />
      </View>
    </View>
  </View>
</View>
`;
